# task-manager-mcp

./: MCP-README.md  README.md  main.py  mcp_server_fixed.py  pyproject.toml  setup.py
app/: __init__.py
app/api/: __init__.py  api.py  cli.py
app/core/: plan_manager.py  task_manager.py
app/ui/: __init__.py  input_handler.py  terminal_ui.py  ui_components.py
mcp_guidelines/: llms_full.txt
tests/: __init__.py  test_mcp_server.py
